[package]
name = "egui-latest_wgpu_backend"
version = "0.19.0"
authors = [
    "Nils Hasenbanck <nils@hasenbanck.de>",
    "Arlo Blythe <arlo@urwick.co.uk>"
]
edition = "2021"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/arlohb/egui-latest_wgpu_backend"
repository = "https://github.com/arlohb/egui-latest_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[example]]
name = "demo"

[features]
default = []
web = []

[dependencies]
egui = { version = "0.19.0", features = ["bytemuck"] }
wgpu = "0.14"
bytemuck = "1.7"

[dev-dependencies]
egui = "0.19.0"
egui_demo_lib = "0.19.0"
egui-winit = "0.19.0"

wgpu = "0.14"
pollster = "0.2"
